# dcap-cairo-cli

./: Cargo.toml  README.md
src/: cairo.rs  constants.rs  main.rs  quote.rs
src/commands/: mod.rs
src/commands/preprocess/: include_bytes.rs  mod.rs  pem.rs  qeidentity.rs  quote.rs  tcbinfo.rs
