[package]
name = "dcap-cairo-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
x509-parser = "0.17.0"

[[bin]]
name = "dcap-cairo"
path = "src/main.rs"
